--- a/index.html
+++ b/index.html
@@ -13,6 +13,29 @@
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
+
+        <div class="navigation">
+            <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+
+            <label for="navi-toggle" class="navigation__button">
+                <span class="navigation__icon">&nbsp;</span>
+            </label>
+
+            <div class="navigation__background">&nbsp;</div>
+
+            <nav class="navigation__nav">
+                <ul class="navigation__list">
+                    <li class="navigation__item"><a href="#"class="navigation__link"><span>01</span>About Natours</a></li>
+                    <li class="navigation__item"><a href="#"class="navigation__link"><span>02</span>Your Benefits</a></li>
+                    <li class="navigation__item"><a href="#"class="navigation__link"><span>03</span>Popular Tours</a></li>
+                    <li class="navigation__item"><a href="#"class="navigation__link"><span>04</span>Stories</a></li>
+                    <li class="navigation__item"><a href="#"class="navigation__link"><span>05</span>Book Now</a></li>
+                </ul>
+            </nav>
+        </div>
+
+
+
         <header class="header">
             <div class="header__logo-box">
                 <img src="img/logo-white.png" alt="Logo" class="header__logo">
@@ -23,7 +46,7 @@
                 <span class="heading-primary--sub">is where life happens</span>
                 </h1>
 
-                <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+                <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
             </div>
             
         </header>
@@ -95,7 +118,7 @@
                 </div>
             </section>
 
-            <section class="section-tours">
+            <section class="section-tours" id="section-tours">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Most popular tours
@@ -130,7 +153,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$297</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -162,7 +185,7 @@
                                                 <p class="card__price-only">Only</p>
                                                 <p class="card__price-value">$497</p>
                                             </div>
-                                            <a href="#" class="btn btn--white">Book now!</a>
+                                            <a href="#popup" class="btn btn--white">Book now!</a>
                                         </div>
                                     </div>
                                 </div>
@@ -194,7 +217,7 @@
                                                 <p class="card__price-only">Only</p>
                                                 <p class="card__price-value">$897</p>
                                             </div>
-                                            <a href="#" class="btn btn--white">Book now!</a>
+                                            <a href="#popup" class="btn btn--white">Book now!</a>
                                         </div>
                                     </div>
                                 </div>
@@ -327,6 +350,22 @@
                </div>
            </div>
         </footer>
+
+        <div class="popup" id="popup">
+            <div class="popup__content">
+               <div class="popup__left">
+                   <img src="img/nat-8.jpg" alt="Tour Photo" class="popup__img">
+                   <img src="img/nat-9.jpg" alt="Tour Photo" class="popup__img">
+               </div>
+               <div class="popup__right">
+                   <a href="#section-tours" class="popup__close">&times;</a>
+                   <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                   <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+                   <p class="popup__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra lorem et semper gravida. Praesent elementum quis orci nec interdum. Morbi at facilisis magna. Maecenas non augue imperdiet, aliquet urna tincidunt, euismod ipsum. Pellentesque arcu libero, hendrerit et nulla sit amet, interdum ornare diam. In sodales dolor a leo feugiat lacinia. Cras facilisis ipsum arcu, id vulputate metus scelerisque congue. Vivamus euismod, ex id pulvinar posuere, libero metus efficitur tellus, nec vestibulum est lorem nec enim. Pellentesque lacus ex, sollicitudin at tincidunt maximus, egestas in mi. Aliquam faucibus sed dui et convallis. Nullam venenatis, leo quis mollis fermentu.</p>
+                   <a href="#" class="btn btn--green">Book now</a>
+               </div>
+            </div>
+        </div>
 
         <!-- Learning how o use a grid system
             
